# django-puppeteer

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  poetry.toml  pyproject.toml  tsconfig.json
main/: settings.py  urls.py
node-src/: testPuppeteer.ts
